#6: branchFollowLimit config option small rendering bugfix